engine/scripting/native_api/dse_api.h

// ============================================================
// Context Setup — 引擎初始化时调用一次
// ============================================================

DSE_CAPI void dse_native_api_init(
    void* world,           // World*
    void* asset_manager,   // AssetManager*
    void* audio_system,    // AudioSystem* (可为 nullptr)
    void  (*quit_fn)(void),
    void  (*set_title_fn)(const char*),
    float (*get_fps_fn)(void),
    void  (*set_fps_fn)(float),
    int   (*get_draw_calls_fn)(void)   // 可为 nullptr
);
// ============================================================
// Extended Context Setup — 扩展上下文（metrics 回调 + floating origin）
// ============================================================

DSE_CAPI void dse_native_api_init_ext(
    int   (*get_max_batch_sprites_fn)(void),
    int   (*get_sprite_count_fn)(void),
    int   (*get_gpu_driven_active_fn)(void),
    int   (*get_gpu_indirect_draw_count_fn)(void),
    int   (*get_gpu_total_instances_fn)(void),
    void* floating_origin);
DSE_CAPI void dse_physics2d_add_circle_collider(uint32_t e, float radius,
                                                 float density, float friction, float restitution);
DSE_CAPI void dse_physics2d_set_circle_collider_trigger(uint32_t e, int is_trigger);
DSE_CAPI void dse_physics2d_add_polygon_collider(uint32_t e, const float* verts, int count,
                                                  float density, float friction, float restitution);
DSE_CAPI void dse_physics2d_set_polygon_collider_trigger(uint32_t e, int is_trigger);
DSE_CAPI void dse_physics2d_add_joint(uint32_t e, int type, uint32_t entity_a, uint32_t entity_b,
                                       float ax, float ay, float bx, float by, int collide_connected);
DSE_CAPI void dse_physics2d_set_joint_revolute(uint32_t e, int enable_limit, float lower_deg, float upper_deg,
                                                int enable_motor, float motor_speed, float max_torque);
DSE_CAPI void dse_physics2d_set_joint_distance(uint32_t e, float min_len, float max_len,
                                                float stiffness, float damping);
DSE_CAPI void dse_physics2d_set_joint_prismatic(uint32_t e, float axis_x, float axis_y,
                                                 int enable_limit, float lower, float upper,
                                                 int enable_motor, float motor_speed, float max_force);
DSE_CAPI void dse_physics2d_destroy_joint(uint32_t e);
DSE_CAPI int  dse_physics2d_raycast(float sx, float sy, float ex, float ey,
                                    uint32_t* out_entity, float* out_point, float* out_normal);
DSE_CAPI int  dse_physics2d_poll_collision_event(uint32_t e, uint32_t* out_other,
                                                  int* out_is_trigger, int* out_is_enter);
DSE_CAPI void dse_physics2d_add_tilemap(uint32_t e, int width, int height,
                                        float tile_size, uint32_t tex_handle);
DSE_CAPI void dse_physics2d_set_tile(uint32_t e, int x, int y, int tile_id);
// ============================================================
// 2D Systems（Parallax / Light2D / SpriteSheet / Atlas / Camera2D / Trail / LineRenderer / AudioSpatial2D）
// ============================================================

DSE_CAPI void  dse_parallax_add(uint32_t e);
DSE_CAPI int   dse_parallax_add_layer(uint32_t e, float scroll_x, float scroll_y);
DSE_CAPI void  dse_parallax_set_layer_scroll(uint32_t e, int layer, float sx, float sy);
DSE_CAPI void  dse_parallax_set_layer_auto_scroll(uint32_t e, int layer, float sx, float sy);
DSE_CAPI void  dse_parallax_set_layer_opacity(uint32_t e, int layer, float opacity);
DSE_CAPI int   dse_parallax_get_layer_count(uint32_t e);
DSE_CAPI void  dse_light2d_add(uint32_t e, int type);
DSE_CAPI void  dse_light2d_set_color(uint32_t e, float r, float g, float b);
DSE_CAPI void  dse_light2d_set_intensity(uint32_t e, float intensity);
DSE_CAPI void  dse_light2d_set_range(uint32_t e, float range);
DSE_CAPI void  dse_light2d_set_shadow(uint32_t e, int mode);
DSE_CAPI void  dse_light2d_set_ambient(uint32_t e, float r, float g, float b, float intensity);
DSE_CAPI void  dse_normal_map_2d_add(uint32_t e, float strength);
DSE_CAPI int   dse_sprite_sheet_load(const char* path);
DSE_CAPI int   dse_sprite_sheet_frame_count(int sheet);
DSE_CAPI void  dse_sprite_sheet_get_frame_uv(int sheet, int frame, float* out_uv);
DSE_CAPI int   dse_atlas_load(const char* path);
DSE_CAPI int   dse_atlas_entry_count(int atlas);
DSE_CAPI void  dse_atlas_get_entry_uv(int atlas, const char* name, float* out_uv);
DSE_CAPI void  dse_camera_controller_2d_add(uint32_t e);
DSE_CAPI void  dse_camera_2d_shake(uint32_t e, float trauma);
DSE_CAPI void  dse_camera_2d_set_zoom(uint32_t e, float zoom);
DSE_CAPI void  dse_camera_2d_set_bounds(uint32_t e, float min_x, float min_y, float max_x, float max_y);
DSE_CAPI void  dse_camera_2d_set_look_ahead(uint32_t e, float lax, float lay);
DSE_CAPI void  dse_trail_renderer_add(uint32_t e, float lifetime, float start_width, float end_width);
DSE_CAPI void  dse_trail_set_emitting(uint32_t e, int emitting);
DSE_CAPI void  dse_trail_set_colors(uint32_t e, float r1, float g1, float b1, float a1,
                                    float r2, float g2, float b2, float a2);
DSE_CAPI void  dse_trail_clear(uint32_t e);
DSE_CAPI void  dse_line_renderer_add(uint32_t e, float width);
DSE_CAPI void  dse_line_renderer_set_points(uint32_t e, const float* points, int count);
DSE_CAPI void  dse_line_renderer_set_width(uint32_t e, float width);
DSE_CAPI void  dse_line_renderer_set_color(uint32_t e, float r, float g, float b, float a);
DSE_CAPI void  dse_line_renderer_set_closed(uint32_t e, int closed);
DSE_CAPI void  dse_audio_spatial_2d_add(uint32_t e, float min_dist, float max_dist);
DSE_CAPI void  dse_audio_spatial_2d_set_range(uint32_t e, float min_dist, float max_dist);
DSE_CAPI void  dse_audio_spatial_2d_set_attenuation(uint32_t e, int model, float rolloff);
DSE_CAPI void  dse_audio_listener_2d_add(uint32_t e, float global_volume);
// ============================================================
// HTTP — 异步完成队列模型
// ============================================================

// 发送请求，返回 request_id（0 = 失败）。headers_json 为 JSON 字符串 {"K":"V",...} 或 NULL。
DSE_CAPI uint32_t dse_http_send(const char* method, const char* url, const char* body,
                                const char* headers_json, int timeout_sec, int verify_peer,
                                const char* ca_file);
// 轮询已完成的请求 ID，返回数量。每帧调用。
DSE_CAPI int   dse_http_poll(uint32_t* out_ids, int max_ids);
// 获取指定请求的响应数据。成功返回 1。
DSE_CAPI int   dse_http_get_response(uint32_t request_id, int* out_status,
                                     char* out_body, int body_cap,
                                     char* out_error, int error_cap);
// 内部 pump（引擎 Tick 自动调用）
DSE_CAPI void  dse_http_update(void);
DSE_CAPI int   dse_http_available(void);
// ============================================================
// Video — 句柄式视频播放器
// ============================================================

DSE_CAPI uint32_t dse_video_create_player(void);
DSE_CAPI void  dse_video_destroy_player(uint32_t player);
// play: backend: 0=Auto, 1=FFmpeg, 2=PlMpeg
DSE_CAPI void  dse_video_play(uint32_t player, const char* path, int loop, float playback_rate,
                             int decode_audio, int prefetch_frames, int backend);
DSE_CAPI void  dse_video_pause(uint32_t player);
DSE_CAPI void  dse_video_resume(uint32_t player);
DSE_CAPI void  dse_video_stop(uint32_t player);
DSE_CAPI void  dse_video_seek(uint32_t player, float time);
DSE_CAPI void  dse_video_set_loop(uint32_t player, int loop);
DSE_CAPI void  dse_video_set_playback_rate(uint32_t player, float rate);
DSE_CAPI uint32_t dse_video_update(uint32_t player, float delta_time);  // 返回 texture_id
DSE_CAPI int   dse_video_get_state(uint32_t player);   // 0=Idle,1=Playing,2=Paused,3=Stopped,4=Ended,5=Error
DSE_CAPI float dse_video_get_time(uint32_t player);
DSE_CAPI float dse_video_get_duration(uint32_t player);
DSE_CAPI void  dse_video_get_info(uint32_t player, int* out_w, int* out_h, float* out_fps,
                                 float* out_duration, int* out_total_frames, int* out_has_audio,
                                 int* out_sample_rate, int* out_channels,
                                 char* out_codec, int codec_cap);
DSE_CAPI uint32_t dse_video_get_texture(uint32_t player);
// ============================================================
// DSSL（DSEngine Shader Language）
// ============================================================

DSE_CAPI uint32_t dse_dssl_load_material(const char* path);