GameScripts/DSEngine.Runtime/Generated/NativeManual.gen.cs


    [LibraryImport(Lib, EntryPoint = "dse_physics2d_add_circle_collider")]
    internal static partial void dse_physics2d_add_circle_collider(uint e, float radius, float density, float friction, float restitution);

    [LibraryImport(Lib, EntryPoint = "dse_physics2d_set_circle_collider_trigger")]
    internal static partial void dse_physics2d_set_circle_collider_trigger(uint e, int isTrigger);

    [LibraryImport(Lib, EntryPoint = "dse_physics2d_add_polygon_collider")]
    internal static partial void dse_physics2d_add_polygon_collider(uint e, float[] verts, int count, float density, float friction, float restitution);

    [LibraryImport(Lib, EntryPoint = "dse_physics2d_set_polygon_collider_trigger")]
    internal static partial void dse_physics2d_set_polygon_collider_trigger(uint e, int isTrigger);

    [LibraryImport(Lib, EntryPoint = "dse_physics2d_add_joint")]
    internal static partial void dse_physics2d_add_joint(uint e, int type, uint entityA, uint entityB, float ax, float ay, float bx, float by, int collideConnected);

    [LibraryImport(Lib, EntryPoint = "dse_physics2d_set_joint_revolute")]
    internal static partial void dse_physics2d_set_joint_revolute(uint e, int enableLimit, float lowerDeg, float upperDeg, int enableMotor, float motorSpeed, float maxTorque);

    [LibraryImport(Lib, EntryPoint = "dse_physics2d_set_joint_distance")]
    internal static partial void dse_physics2d_set_joint_distance(uint e, float minLen, float maxLen, float stiffness, float damping);

    [LibraryImport(Lib, EntryPoint = "dse_physics2d_set_joint_prismatic")]
    internal static partial void dse_physics2d_set_joint_prismatic(uint e, float axisX, float axisY, int enableLimit, float lower, float upper, int enableMotor, float motorSpeed, float maxForce);

    [LibraryImport(Lib, EntryPoint = "dse_physics2d_destroy_joint")]
    internal static partial void dse_physics2d_destroy_joint(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_physics2d_raycast")]
    internal static partial int dse_physics2d_raycast(float sx, float sy, float ex, float ey, out uint outEntity, [Out] float[] outPoint, [Out] float[] outNormal);

    [LibraryImport(Lib, EntryPoint = "dse_physics2d_poll_collision_event")]
    internal static partial int dse_physics2d_poll_collision_event(uint e, out uint outOther, out int outIsTrigger, out int outIsEnter);

    [LibraryImport(Lib, EntryPoint = "dse_physics2d_add_tilemap")]
    internal static partial void dse_physics2d_add_tilemap(uint e, int width, int height, float tileSize, uint texHandle);

    [LibraryImport(Lib, EntryPoint = "dse_physics2d_set_tile")]
    internal static partial void dse_physics2d_set_tile(uint e, int x, int y, int tileId);

    [LibraryImport(Lib, EntryPoint = "dse_parallax_add")]
    internal static partial void dse_parallax_add(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_parallax_add_layer")]
    internal static partial int dse_parallax_add_layer(uint e, float scrollX, float scrollY);

    [LibraryImport(Lib, EntryPoint = "dse_parallax_set_layer_scroll")]
    internal static partial void dse_parallax_set_layer_scroll(uint e, int layer, float sx, float sy);

    [LibraryImport(Lib, EntryPoint = "dse_parallax_set_layer_auto_scroll")]
    internal static partial void dse_parallax_set_layer_auto_scroll(uint e, int layer, float sx, float sy);

    [LibraryImport(Lib, EntryPoint = "dse_parallax_set_layer_opacity")]
    internal static partial void dse_parallax_set_layer_opacity(uint e, int layer, float opacity);

    [LibraryImport(Lib, EntryPoint = "dse_parallax_get_layer_count")]
    internal static partial int dse_parallax_get_layer_count(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_light2d_add")]
    internal static partial void dse_light2d_add(uint e, int type);

    [LibraryImport(Lib, EntryPoint = "dse_light2d_set_color")]
    internal static partial void dse_light2d_set_color(uint e, float r, float g, float b);

    [LibraryImport(Lib, EntryPoint = "dse_light2d_set_intensity")]
    internal static partial void dse_light2d_set_intensity(uint e, float intensity);

    [LibraryImport(Lib, EntryPoint = "dse_light2d_set_range")]
    internal static partial void dse_light2d_set_range(uint e, float range);

    [LibraryImport(Lib, EntryPoint = "dse_light2d_set_shadow")]
    internal static partial void dse_light2d_set_shadow(uint e, int mode);

    [LibraryImport(Lib, EntryPoint = "dse_light2d_set_ambient")]
    internal static partial void dse_light2d_set_ambient(uint e, float r, float g, float b, float intensity);

    [LibraryImport(Lib, EntryPoint = "dse_normal_map_2d_add")]
    internal static partial void dse_normal_map_2d_add(uint e, float strength);

    [LibraryImport(Lib, EntryPoint = "dse_sprite_sheet_load", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_sprite_sheet_load(string path);

    [LibraryImport(Lib, EntryPoint = "dse_sprite_sheet_frame_count")]
    internal static partial int dse_sprite_sheet_frame_count(int sheet);

    [LibraryImport(Lib, EntryPoint = "dse_sprite_sheet_get_frame_uv")]
    internal static partial void dse_sprite_sheet_get_frame_uv(int sheet, int frame, [Out] float[] outUv);

    [LibraryImport(Lib, EntryPoint = "dse_atlas_load", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_atlas_load(string path);

    [LibraryImport(Lib, EntryPoint = "dse_atlas_entry_count")]
    internal static partial int dse_atlas_entry_count(int atlas);

    [LibraryImport(Lib, EntryPoint = "dse_atlas_get_entry_uv", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_atlas_get_entry_uv(int atlas, string name, [Out] float[] outUv);

    [LibraryImport(Lib, EntryPoint = "dse_camera_controller_2d_add")]
    internal static partial void dse_camera_controller_2d_add(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_camera_2d_shake")]
    internal static partial void dse_camera_2d_shake(uint e, float trauma);

    [LibraryImport(Lib, EntryPoint = "dse_camera_2d_set_zoom")]
    internal static partial void dse_camera_2d_set_zoom(uint e, float zoom);

    [LibraryImport(Lib, EntryPoint = "dse_camera_2d_set_bounds")]
    internal static partial void dse_camera_2d_set_bounds(uint e, float minX, float minY, float maxX, float maxY);

    [LibraryImport(Lib, EntryPoint = "dse_camera_2d_set_look_ahead")]
    internal static partial void dse_camera_2d_set_look_ahead(uint e, float lax, float lay);

    [LibraryImport(Lib, EntryPoint = "dse_trail_renderer_add")]
    internal static partial void dse_trail_renderer_add(uint e, float lifetime, float startWidth, float endWidth);

    [LibraryImport(Lib, EntryPoint = "dse_trail_set_emitting")]
    internal static partial void dse_trail_set_emitting(uint e, int emitting);

    [LibraryImport(Lib, EntryPoint = "dse_trail_set_colors")]
    internal static partial void dse_trail_set_colors(uint e, float r1, float g1, float b1, float a1, float r2, float g2, float b2, float a2);

    [LibraryImport(Lib, EntryPoint = "dse_trail_clear")]
    internal static partial void dse_trail_clear(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_line_renderer_add")]
    internal static partial void dse_line_renderer_add(uint e, float width);

    [LibraryImport(Lib, EntryPoint = "dse_line_renderer_set_points")]
    internal static partial void dse_line_renderer_set_points(uint e, float[] points, int count);

    [LibraryImport(Lib, EntryPoint = "dse_line_renderer_set_width")]
    internal static partial void dse_line_renderer_set_width(uint e, float width);

    [LibraryImport(Lib, EntryPoint = "dse_line_renderer_set_color")]
    internal static partial void dse_line_renderer_set_color(uint e, float r, float g, float b, float a);

    [LibraryImport(Lib, EntryPoint = "dse_line_renderer_set_closed")]
    internal static partial void dse_line_renderer_set_closed(uint e, int closed);

    [LibraryImport(Lib, EntryPoint = "dse_audio_spatial_2d_add")]
    internal static partial void dse_audio_spatial_2d_add(uint e, float minDist, float maxDist);

    [LibraryImport(Lib, EntryPoint = "dse_audio_spatial_2d_set_range")]
    internal static partial void dse_audio_spatial_2d_set_range(uint e, float minDist, float maxDist);

    [LibraryImport(Lib, EntryPoint = "dse_audio_spatial_2d_set_attenuation")]
    internal static partial void dse_audio_spatial_2d_set_attenuation(uint e, int model, float rolloff);

    [LibraryImport(Lib, EntryPoint = "dse_audio_listener_2d_add")]
    internal static partial void dse_audio_listener_2d_add(uint e, float globalVolume);

    [LibraryImport(Lib, EntryPoint = "dse_http_send", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial uint dse_http_send(string method, string url, string body, string headersJson, int timeoutSec, int verifyPeer, string caFile);

    [LibraryImport(Lib, EntryPoint = "dse_http_poll")]
    internal static partial int dse_http_poll(out uint outIds, int maxIds);

    [LibraryImport(Lib, EntryPoint = "dse_http_get_response")]
    internal static partial int dse_http_get_response(uint requestId, out int outStatus, [Out] byte[] outBody, int bodyCap, [Out] byte[] outError, int errorCap);

    [LibraryImport(Lib, EntryPoint = "dse_http_update")]
    internal static partial void dse_http_update();

    [LibraryImport(Lib, EntryPoint = "dse_http_available")]
    internal static partial int dse_http_available();

    [LibraryImport(Lib, EntryPoint = "dse_video_create_player")]
    internal static partial uint dse_video_create_player();

    [LibraryImport(Lib, EntryPoint = "dse_video_destroy_player")]
    internal static partial void dse_video_destroy_player(uint player);

    [LibraryImport(Lib, EntryPoint = "dse_video_play", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_video_play(uint player, string path, int loop, float playbackRate, int decodeAudio, int prefetchFrames, int backend);

    [LibraryImport(Lib, EntryPoint = "dse_video_pause")]
    internal static partial void dse_video_pause(uint player);

    [LibraryImport(Lib, EntryPoint = "dse_video_resume")]
    internal static partial void dse_video_resume(uint player);

    [LibraryImport(Lib, EntryPoint = "dse_video_stop")]
    internal static partial void dse_video_stop(uint player);

    [LibraryImport(Lib, EntryPoint = "dse_video_seek")]
    internal static partial void dse_video_seek(uint player, float time);

    [LibraryImport(Lib, EntryPoint = "dse_video_set_loop")]
    internal static partial void dse_video_set_loop(uint player, int loop);

    [LibraryImport(Lib, EntryPoint = "dse_video_set_playback_rate")]
    internal static partial void dse_video_set_playback_rate(uint player, float rate);

    [LibraryImport(Lib, EntryPoint = "dse_video_update")]
    internal static partial uint dse_video_update(uint player, float deltaTime);

    [LibraryImport(Lib, EntryPoint = "dse_video_get_state")]
    internal static partial int dse_video_get_state(uint player);

    [LibraryImport(Lib, EntryPoint = "dse_video_get_time")]
    internal static partial float dse_video_get_time(uint player);

    [LibraryImport(Lib, EntryPoint = "dse_video_get_duration")]
    internal static partial float dse_video_get_duration(uint player);

    [LibraryImport(Lib, EntryPoint = "dse_video_get_info")]
    internal static partial void dse_video_get_info(uint player, out int outW, out int outH, out float outFps, out float outDuration, out int outTotalFrames, out int outHasAudio, out int outSampleRate, out int outChannels, [Out] byte[] outCodec, int codecCap);

    [LibraryImport(Lib, EntryPoint = "dse_video_get_texture")]
    internal static partial uint dse_video_get_texture(uint player);

    [LibraryImport(Lib, EntryPoint = "dse_dssl_load_material", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial uint dse_dssl_load_material(string path);
